# quizScatterer

./: .coverage  .gitignore  Makefile  README.md  getGensimModel.sh  pyproject.toml  requirements.txt  sample.txt  setup.py
quizScatterer/: __main__.py
quizScatterer/classes/: qs.py
quizscatterer/: __main__.py  data_structure.py  qs.py
src/: __main__.py
src/quizscatterer/: __init__.py  qs.py
tests/: test_data_structure.py
