[project]
name = "quizscatterer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-uesaka", email = "aleo724@gmail.com" }
]
dependencies = [
    "setuptools>=70.3.0",
    "gensim>=4.3.2",
    "mecab-python3>=1.0.9",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.1",
    "scipy>=1.14.0",
    "six>=1.16.0",
    "smart-open>=7.0.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/quizscatterer"]
